# terminal-size

./: Cargo.toml  README.md  index.html
.github/workflows/: main.yml
doc/: search-index.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js
doc/libc/consts/os/posix88/: constant.MAP_FAILED.html
doc/libc/funcs/bsd43/: fn.accept.html  fn.bind.html  fn.connect.html  fn.freeifaddrs.html  fn.getifaddrs.html  fn.getpeername.html  fn.getsockname.html  fn.recv.html  fn.recvfrom.html  fn.send.html  fn.sendto.html  fn.setsockopt.html
doc/libc/funcs/bsd44/: fn.madvise.html  fn.mincore.html
doc/libc/funcs/c95/stdio/: fn.fclose.html  fn.feof.html  fn.ferror.html  fn.fflush.html  fn.fgetc.html  fn.fgetpos.html  fn.fgets.html  fn.fopen.html  fn.fputc.html  fn.fputs.html  fn.fread.html  fn.freopen.html  fn.fseek.html  fn.fsetpos.html  fn.ftell.html  fn.fwrite.html  fn.perror.html  fn.puts.html  fn.remove.html  fn.rename.html  fn.rewind.html  fn.setbuf.html  fn.setvbuf.html  fn.tmpfile.html  fn.ungetc.html
doc/libc/funcs/c95/stdlib/: fn.atof.html  fn.atoi.html  fn.calloc.html  fn.free.html  fn.getenv.html  fn.malloc.html  fn.realloc.html  fn.strtod.html  fn.strtol.html  fn.strtoul.html  (+1 more)
doc/src/libc/: lib.rs.html
doc/src/terminal_size/: lib.rs.html  unix.rs.html
doc/terminal_size/: fn.terminal_size.html  index.html  sidebar-items.js  struct.Height.html  struct.Width.html
doc/terminal_size/unix/: sidebar-items.js
examples/: get_size.rs
src/: lib.rs  unix.rs  windows.rs
(+142 files in other folders)
