[package]
name = "terminal_size"
version = "0.1.3"
authors = ["Andrew Chin <achin@eminence32.net>"]
description = "Gets the size of your Linux or Windows terminal"
documentation = "http://eminence.github.io/terminal-size/doc/terminal_size/index.html"
repository = "https://github.com/eminence/terminal-size"
keywords = ["terminal", "console", "term", "size", "dimensions"]
license = "MIT OR Apache-2.0"


[dependencies]
libc = "0.1"
winapi = "0.2"
kernel32-sys = "0.1"
