[package]
name = "terminal_size"
version = "0.3.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
description = "Gets the size of your Linux or Windows terminal"
documentation = "https://docs.rs/crate/terminal_size"
repository = "https://github.com/eminence/terminal-size"
keywords = ["terminal", "console", "term", "size", "dimensions"]
license = "MIT OR Apache-2.0"
edition = "2021"


[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.0", features = ["termios"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]
